frontend v3 code uplode for change logo, colors

--- a/styles/login-style.css
+++ b/styles/login-style.css
@@ -12,7 +12,7 @@
     --cyan-primary: #06b6d4;
 
     /* Background Colors */
-    --background: #ffffff;
+    --background: #f7fcf4;
     --background-secondary: #f8fafc;
     --foreground: #1f2937;
     --card: #ffffff;
@@ -105,6 +105,14 @@ body {
 
 .nav-logo:hover {
     transform: scale(1.05);
+}
+.nav-logo-img {
+    width: 50px;
+    /* smaller, cleaner */
+    height: auto;
+    /* keeps correct aspect ratio */
+    object-fit: contain;
+    /* prevents distortion */
 }
 
 .logo-icon svg {
@@ -443,6 +451,10 @@ body {
     filter: drop-shadow(0 8px 32px rgba(30, 126, 52, 0.3));
 }
 
+.main-logo-img{
+    width: 120px;
+        height: 120px;
+}
 @keyframes logoFloat {
 
     0%,
